# fast-api-for-ai

./: README.md  pyproject.toml  requirements.txt
app/: endpoint.py  main.py
app/ai/: base.py  gemini.py
app/auth/: dependencies.py  throttling.py
app/prompts/: system_prompts.md
